feat: 解决bug,实现带有上下文的工具调用